<resources>
    <string name="app_name">Dona Dela</string>
    <string name="o_que_voce">O que você</string>
    <string name="logo_donadela">logo_donaDela</string>
    <string name="procura">procura?</string>
    <string name="produtos_e_acessorios">Produtos \n e acessórios</string>
    <string name="roupas_Intimas">Roupas Íntimas</string>
    <string name="shopping_icon">shopping_icon</string>
    <string name="oral">Oral</string>
    <string name="anal">Anal</string>
    <string name="gels">Lubrificante /Estimulante Retardante / Adstringente</string>
    <string name="acess_rios">Acessórios/Higiene Proteses/Fetiche </string>
    <string name="produtos">Produtos</string>
    <string name="roupa_intima">Roupa Intima</string>
    <string name="contato">Contato</string>
    <string name="lingerie_vermelha">Lingerie vermelha</string>
    <string name="search">Search</string>
    <string name="icon">Icon</string>
    <string name="text_exemple_description">Sua principal função é aquecer a região onde foi aplicação, excitando ainda mais o seu parceiro(a) e facilitando até o orgasmo. 15g</string>
    <string name="nome_produto">Nome Produto</string>
    <string name="seguinte">Seguinte</string>
    <string name="anterior">Anterior</string>
    <string name="add_ao_carrinho">Add ao Carrinho</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_search">Pesquisar</string>
    <string name="hint_search">Procurar por Produto</string>
</resources>