<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="30dp"
        android:background="@drawable/background_items" />

    <ImageSwitcher
        android:id="@+id/image_product_details"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_margin="20dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background" />

    <Button
        android:id="@+id/btn_prev_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/retangle_fill"
        android:fontFamily="@font/red_hat_display_bold"
        android:textAllCaps="false"
        android:text="@string/anterior"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btn_nex_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_product_details" />

    <Button
        android:id="@+id/btn_nex_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/red_hat_display_bold"
        android:textAllCaps="false"
        android:background="@drawable/retangle_fill"
        android:text="@string/seguinte"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_prev_image"
        app:layout_constraintTop_toBottomOf="@id/image_product_details" />


    <TextView
        android:id="@+id/text_name_of_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display_black_italic"
        android:gravity="center"
        android:text="@string/nome_produto"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_prev_image" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display_bold"
        android:gravity="center"
        android:maxLines="4"
        android:padding="20dp"
        android:text="@string/text_exemple_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name_of_product"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
