<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoDona"
        android:layout_width="259dp"
        android:layout_height="196dp"
        android:layout_marginTop="66dp"
        android:contentDescription="@string/logo_donadela"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/what"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display"
        android:text="@string/o_que_voce"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoDona" />

    <TextView
        android:id="@+id/procura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display_black_italic"
        android:text="@string/procura"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what" />

    <View
        android:id="@+id/retangle1"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/procura" />

    <View
        android:id="@+id/retangle2"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retangle1" />

    <View
        android:id="@+id/circle1"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:background="@drawable/circle"
        app:layout_constraintTop_toTopOf="@id/retangle1"
        app:layout_constraintStart_toStartOf="@id/retangle1"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display_bold"
        android:textSize="16sp"
        android:text="@string/produtos_e_acessorios"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/retangle1"
        app:layout_constraintEnd_toEndOf="@id/retangle1"
        app:layout_constraintStart_toEndOf="@id/circle1"
        app:layout_constraintTop_toTopOf="@id/retangle1" />


</android.support.constraint.ConstraintLayout>