<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/myview"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/shadow_box"
        app:layout_constraintEnd_toEndOf="@+id/item1"
        app:layout_constraintTop_toTopOf="@id/item1" />

    <Button
        android:id="@+id/item1"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/retangle_fill"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/oral"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/item2"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/retangle_fill"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/anal"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item1" />

    <TextView
        android:id="@+id/shadow2"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/shadow_box"
        app:layout_constraintEnd_toEndOf="@+id/item2"
        app:layout_constraintTop_toTopOf="@id/item2" />

    <Button
        android:id="@+id/item3"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/retangle_fill"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/gels"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/item2" />

    <TextView
        android:id="@+id/shadow3"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/shadow_box"
        app:layout_constraintEnd_toEndOf="@+id/item3"
        app:layout_constraintTop_toTopOf="@id/item3" />

    <Button
        android:id="@+id/item4"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/retangle_fill"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/acess_rios"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/item3" />

    <TextView
        android:id="@+id/shadow4"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/shadow_box"
        app:layout_constraintEnd_toEndOf="@+id/item4"
        app:layout_constraintTop_toTopOf="@id/item4" />
    
    <View
        android:layout_width="345dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:background="@drawable/retangle_fill" />

</android.support.constraint.ConstraintLayout>