<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <View
        android:id="@+id/bottom_bar"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/retangle_fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/produts_bottom_bar"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:background="@drawable/circle_pink"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintStart_toStartOf="@id/bottom_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <View
        android:id="@+id/lingerie_active"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:background="@drawable/circle_pink"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toStartOf="@id/contato_active"
        app:layout_constraintStart_toEndOf="@id/produts_bottom_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <View
        android:id="@+id/contato_active"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:background="@drawable/circle_pink"
        app:layout_constraintEnd_toEndOf="@id/bottom_bar"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <ImageView
        android:id="@+id/icon_shopping_bottom"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_outline_shopping_bag_24"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="@id/produts_bottom_bar"
        app:layout_constraintStart_toStartOf="@id/bottom_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/produtos"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/icon_shopping_bottom"
        app:layout_constraintEnd_toEndOf="@id/icon_shopping_bottom"
        app:layout_constraintStart_toStartOf="@id/icon_shopping_bottom" />

    <ImageView
        android:id="@+id/icon_lingerie"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/mdi_lingerie"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="@id/lingerie_active"
        app:layout_constraintStart_toStartOf="@id/lingerie_active"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <TextView
        android:id="@+id/lingerie_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/roupa_intima"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/icon_lingerie"
        app:layout_constraintEnd_toEndOf="@id/icon_lingerie"
        app:layout_constraintStart_toStartOf="@id/icon_lingerie" />

    <ImageView
        android:id="@+id/whatsapp"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/akar_icons_whatsapp_fill"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="@id/contato_active"
        app:layout_constraintStart_toStartOf="@id/contato_active"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/contato"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/whatsapp"
        app:layout_constraintEnd_toEndOf="@id/whatsapp"
        app:layout_constraintStart_toStartOf="@id/whatsapp" />
</androidx.constraintlayout.widget.ConstraintLayout>